[package]
name = "runevm"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
runevm_classfile = { version = "0.0.1", path = "crates/runevm_classfile" }
runevm_native = { version = "0.0.1", path = "crates/runevm_native" }